Opensubdiv crash: Switching subsurf mode to "Simple" then back to "Catmull-Clark" crashes Blender #46677

Closed
opened 2015-11-02 18:22:58 +01:00 by Stanislav Blinov · 4 comments

System Information
64-bit Linux, NVIDIA GTS 450

Blender Version
Broken: 2.76

Short description of error
When using Opensubdiv, switching subsurf modes causes a crash.

Exact steps for others to reproduce the error

  1. Open default scene and add subsurf leve 2 to the cube.
  2. Open user preferences and select Opensubdiv device.
  3. Enable Opensubdiv in subsurf modifier settings.
  4. Try switching subsurf to Simple then back to Catmull-Clark.

On my system, if Opensubdiv device is set to CPU, switching subsurf to Simple then back to Catmull-Clark works once, but another attempt crashes. If device is set to anything else, crash happens on the first switch from Simple to Catmull-Clark.

**System Information** 64-bit Linux, NVIDIA GTS 450 **Blender Version** Broken: 2.76 **Short description of error** When using Opensubdiv, switching subsurf modes causes a crash. **Exact steps for others to reproduce the error** 1. Open default scene and add subsurf leve 2 to the cube. 2. Open user preferences and select Opensubdiv device. 3. Enable Opensubdiv in subsurf modifier settings. 4. Try switching subsurf to Simple then back to Catmull-Clark. On my system, if Opensubdiv device is set to CPU, switching subsurf to Simple then back to Catmull-Clark works once, but another attempt crashes. If device is set to anything else, crash happens on the first switch from Simple to Catmull-Clark.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

This issue was referenced by 6063790732

This issue was referenced by 606379073281c63d13e646308703f53b180790b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46677
No description provided.