Fix T46677: OpenSubdiv crashes when witching from simple and CC subdivisions

Crash was happening due to OpenGL free from the non-main thread. Ideally we need
to implement somewhat delayed unused buffer free for OpenSubdiv similar to what we
are doing in GPU module.